# Genshin-Sentiment-Analysis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dashboard.py  docker-compose.yml  pyproject.toml  简历.txt
.github/workflows/: ci.yml
Business-report-1/: 项目书.md  项目书PPT生成提示词.md
docs/: AI_ENGINEERING.md  CLOUD_LORA.md  PRESENTATION_PROMPT.md  REPORT.md  RUN_GUIDE.md
notebooks/: exploratory_analysis.ipynb
outputs/: ai_analysis.csv  ai_analysis.summary.json  latest_bili_sentiment.json  latest_bili_sentiment.md  latest_bili_tagged.csv
outputs/finetune/: dataset_info.json  eval.jsonl  eval_report.md  eval_report.predictions.csv  labeled.csv  (+2 more)
scripts/: ai_analyze.py  analyze_latest_bili.py  build_finetune_dataset.py  eval_lora.py  export_adapter.sh  healthcheck.py  keyword_vs_ai.py  make_report_charts.py  make_wordcloud.py  monitor_run.py  serve_lora.sh  train_sentiment.py
src/: __init__.py  ab_test.py  analysis.py  aspect_sentiment.py  causal_inference.py  config.py  data_loader.py  lifecycle.py  live_sentiment.py  llm_client.py  main.py  monitor.py  sample_data.py  sentiment_train.py  stats_tests.py  text_pipeline.py  validate.py  visualize.py  wordcloud_gen.py
tests/: conftest.py  test_ab_test.py  test_agents.py  test_analysis.py  test_aspect_sentiment.py  test_bilibili_scraper.py  test_causal_inference.py  test_data_loader.py  test_finetune.py  test_finetune_analysis.py  test_lifecycle.py  test_live_sentiment.py  test_llm_client.py  test_monitor.py  test_rag.py  test_sample_data.py  test_scraper.py  test_sentiment_train.py  test_stats_tests.py  test_text_pipeline.py  test_validate.py  test_wordcloud_gen.py
(+20 files in other folders)
