[project]
name = "genshin-sentiment-analysis"
version = "0.1.0"
description = "原神 B 站玩家生态与舆情分析 —— 端到端数据分析项目"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = ["data-analysis", "sentiment-analysis", "genshin", "game-analytics"]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "scipy>=1.10",
]

[project.optional-dependencies]
# 可选的进阶依赖：调用主流 AI 模型 API 做语义级清洗/归类/分析
# 默认接入 DeepSeek（OpenAI 兼容协议），也可切换到任意 OpenAI 兼容服务
llm = [
    "openai>=1.0",
    "python-dotenv>=1.0",
]
# 可选依赖：生成展示用的词云图（scripts/make_wordcloud.py）
report = [
    "wordcloud>=1.9",
    "jieba>=0.42",
]
# 可选依赖：内部工具看板（dashboard.py）
dashboard = [
    "streamlit>=1.30",
    "altair>=5.0",
]
# 开发工具
dev = [
    "ruff>=0.4",
    "jupyter>=1.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
]

[project.scripts]
# 安装后可直接用 `genshin-analyze` 命令运行完整分析
genshin-analyze = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# matplotlib 与 pandas-stubs 的数组类型交互噪声较多，绘图模块单独放宽
module = "src.visualize"
ignore_errors = true
